--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ input {
     width: 70px;
     border-radius: 5px;
     border: none;
+    text-align: center;
 }
 #conButton {
     display: flex;
